<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical"
    android:layout_margin="10dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:id="@+id/id"
            android:layout_weight="3" android:hint="@string/hint_id"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/citaj"
            android:id="@+id/button6"
            android:onClick="citanje" android:layout_weight="1"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/korisnik"
        android:inputType="text"
        android:hint="@string/hint_korisnicko_ime"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/naziv"
        android:inputType="text"
        android:hint="@string/hint_ime"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unos"
            android:id="@+id/button3"
            android:onClick="unos"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/izmjena"
            android:id="@+id/button4"
            android:onClick="izmjena"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brisanje"
            android:id="@+id/button5"
            android:onClick="brisanje"
            android:layout_weight="1"/>
    </LinearLayout>


</LinearLayout>